Cleaning up vampire slide design. Adding some bats and shit like that. [Completed: 476]

--- a/actions/templates/actions/vampire_power/_device.html
+++ b/actions/templates/actions/vampire_power/_device.html
@@ -6,10 +6,12 @@
 {#     this vampire #}
 {# </div> #}
 <br class="clear" />
+<br class="clear" />
+<br class="clear" />
 <form method="post" action="{% url save_action_form action.slug 'VampirePowerWorksheetForm' %}">
-    <div>
-        <b>Do you have this?</b>
-    </div>
+    <p class="center" style="font-size:16px">
+        Do you have this?
+    </p>
     <ul class="buttonset">
         {% for id, label, help in field.field.choices %}
             <li class="device_button">
