--- a/actions/templates/actions/vampire_power/_get_started.html
+++ b/actions/templates/actions/vampire_power/_get_started.html
@@ -1,6 +1,7 @@
 {% load dated_static %}
+<img src="{% dated_static 'images/vampires/vampire_guy.jpg' %}" alt="vampire" style="float:right;"/>
 <h1>The most wanted vampires</h1>
 <p>
-    Build your plan for slaying the thirstiest energy vampires in your home
+    Build a plan for slaying the thirstiest energy vampires in your home.
 </p>
 <a id="get_started" class="frame_shifter button" href="#">Get Started</a>
