--- a/actions/templates/actions/vampire_power/_home_entertainment.html
+++ b/actions/templates/actions/vampire_power/_home_entertainment.html
@@ -1,4 +1,7 @@
-<br/><br/><br/><br/>
+{% load dated_static %}
+<img src="{% dated_static 'images/vampires/bat_small.png' %}" alt="vampire"/>
+<br/>
+<br/>
 <h2>
     Meet the vampires in...<br/>
     Your home entertainment area
