--- a/actions/templates/actions/vampire_power/_home_office.html
+++ b/actions/templates/actions/vampire_power/_home_office.html
@@ -1,7 +1,8 @@
+{% load dated_static %}
 <br/><br/><br/><br/>
 <h2>
     Meet the vampires in...<br/>
     Your home office
 </h2>
-
+<img src="{% dated_static 'images/vampires/bat_small.png' %}" alt="vampire" style="float:left;"/>
 <a id="home_office" class="frame_shifter button" href="#">Next</a>
