invitation box was not showing up after you created an event

--- a/events/templates/events/detail.html
+++ b/events/templates/events/detail.html
@@ -54,7 +54,7 @@
         </div>
         <div class="box_one_bottom"></div>
         
-        {% if has_manager_privileges and event.invited %}
+        {% if has_manager_privileges %}
             <div class="box_one_top"></div>
             <div class="box_one_middle">
                 {% include "events/_invitations.html" %}
