Adding title to vampire hunt landing page

--- a/templates/rah/vampire_hunt.html
+++ b/templates/rah/vampire_hunt.html
@@ -1,7 +1,7 @@
 {% extends "rah/base.html" %}
 {% load invites %}
 {% load dated_static %}
-
+{% block title %}Vampire Hunt{% endblock %}
 {% block extrahead %}
     <meta property="og:image" content="{% dated_static 'images/vampires/vampire_guy.jpg' %}" />
     <meta property="og:type" content="activity" />
