Fixing issues in which the Host Tools and RSVP box of the energy detail page would get scroll bars in IE7. [Completed: 498]

--- a/events/templates/events/_rsvp_form.html
+++ b/events/templates/events/_rsvp_form.html
@@ -7,5 +7,7 @@
     </div>
     <div>{{ rsvp_form.token }}</div>
     {% csrf_token %}
-    <input type="submit" value="Submit" style="width:100%"/>
+    <div>
+        <input type="submit" value="Submit" style="width:180px;"/>
+    </div>
 </form>
