--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
         <meta name="geo.region" content="US-DC"/>
         <meta name="geo.placename" content="Alliance for Climate Protection"/>
         <meta name="ICBM" content="38.896231, -77.024158"/>
-        <meta property="og:site_name" content="Repower at Home"/>
-        <meta property="fb:app_id" content="132085630163980"/>
+        <meta name="og:site_name" content="Repower at Home"/>
+        <meta name="fb:app_id" content="132085630163980"/>
         <meta name="keywords" content="{% block meta_keywords %}energy efficiency, home energy, climate change, repower at home, alliance for climage protection{% endblock %}" />
         <meta name="description" content="{% block meta_desc %}We can take action to keep millions of pounds of dirty coal from polluting our communities. Every point you earn means one less pound of coal needs to be burned.{% endblock %}" />
         <meta name="DC.title" content="Repower at Home" /> 
@@ -27,7 +27,6 @@
         <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" /> 
         <link rel="alternate" type="application/atom+xml"  href="{% url blog_feed %}" title="Repower at Home Blog" />
         <link rel="shortcut icon" href="{% dated_static 'images/theme/favicon.ico' %}"/>
-        <meta property="fb:app_id" content="132085630163980"/>
         {% if debug %}
             <link rel="stylesheet" href="{% dated_static 'css/style.css' %}" type="text/css" media="screen" charset="utf-8"/>
         {% else %}
