Removing from graphic so place names don't over run the tongue

--- a/templates/rah/_tongue.html
+++ b/templates/rah/_tongue.html
@@ -10,7 +10,7 @@
         </div>
         {% if profile.location %}
             <div id="tongue_location">
-                <span class="icon_from"></span> {{ profile.location }}
+                {{ profile.location }}
             </div>
         {% endif %}
         <br class="clear" />
