testing feedback form wasnt submitting so I had to fix a bug with the ticket id not getting assigned, also added some info to display how many feedback entries have been recieved for a ticket

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -620,6 +620,9 @@ TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWid
 #testing_feedback_form label {
     font-weight: bold;
 }
+#testing_feedback_form label {
+    font-weight: bold;
+}
 /* ---------------------------------------------------------------------------------------------------------------------
 TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget 
 --------------------------------------------------------------------------------------------------------------------- */
