--- a/static/css/style.css
+++ b/static/css/style.css
@@ -595,20 +595,28 @@ TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWid
 #testing_widget {
     position: fixed;
     right: 0;
-    top: 100px;
+    top: 75px;
 }
 #testing_widget_tab {
     position: relative;
     color: white;
-    background-color: grey;
+    background-color: #92C139;
+    font-size: 1.2em;
+    font-weight: bold;
+    padding: 2px;
 }
-#testing_widget .ticket_coutner { float: left; }
+#testing_widget .ticket_counter { float: left; }
 #testing_widget .ticket_controls { float: right; }
 #testing_feedback_form {
     width: 200px;
     background-color: #E3EC9F;
-    border: 2px solid black;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
     padding: 5px;
+}
+#testing_feedback_form label {
+    font-weight: bold;
 }
 /* ---------------------------------------------------------------------------------------------------------------------
 TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget 
