--- a/codebase/templates/codebase/_testing_feedback_form.html
+++ b/codebase/templates/codebase/_testing_feedback_form.html
@@ -1,3 +1,5 @@
+{% load markup %}
+
 <form id="testing_feedback_form" action="{% url testing_feedback %}" method="POST">
     <div class="ticket_counter">
         <span id="ticket_index">1</span> of {{ tickets|length }}
@@ -13,11 +15,23 @@
                 <span class="ticket_id hidden">{{ ticket.ticket_id }}</span>
                 <span>Number of feedback notes: {{ ticket.feedback_count }}</span>
                 <h4>{{ ticket.summary }}</h4>
-                <div>{{ ticket.instructions }}</div>
+                <div>{{ ticket.instructions|markdown:"safe" }}</div>
             </div>
         {% endfor %}
     </div>
-    {{ testing_feedback_form.as_p }}
+    {% for field in testing_feedback_form.visible_fields %}
+        <div class="form_row {% if field.errors %}error{% endif %}{% if 'TextInput' in field.field.widget|pprint or 'Textarea' in field.field.widget|pprint %} overset{% endif %}">
+            {{ field.label_tag }}{{ field }}
+            {% for error in field.errors %}
+                <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
+            {% endfor %}
+        </div>
+    {% endfor %}
+    <div class="hidden">
+        {% for field in testing_feedback_form.hidden_fields %}
+            {{ field }}
+        {% endfor %}
+    </div>
     <input type="submit" value="Submit"></input>
     {% csrf_token %}
 </form>
