--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -11,6 +11,9 @@
 <div class="grid_9 alpha omega">
     {% include "commitments/_pledge_card.html" %}
 </div>
+<div class="grid_9 alpha omega">
+    {% include "commitments/_pledge_card.html" %}
+</div>
 <div class="grid_6 alpha">
     {% include "rah/_sticker_block.html" %}
 </div>
