--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -6,6 +6,9 @@
 <div class="grid_9 alpha omega">
     {% include "rah/_vampire_block.html" %}
 </div>
+<div class="grid_9 alpha omega">
+    {% include "commitments/_pledge_card.html" %}
+</div>
 <br class="clear"/>
     <div class="grid_6 alpha">
         {% include "rah/_sticker_block.html" %}
