--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -3,10 +3,7 @@
 {% block rah_nav_select %}nav_home{% endblock %}
 {% block right_content %}
 <div class="grid_9 alpha omega">
-    {% include "rah/_vampire_block.html" %}
-</div>
-<div class="grid_9 alpha omega">
-    {% include "commitments/_pledge_card.html" %}
+    {% include "rah/_pledge_block.html" %}
 </div>
 <div class="grid_6 alpha">
     {% include "rah/_sticker_block.html" %}
