--- a/static/css/style.css
+++ b/static/css/style.css
@@ -254,28 +254,14 @@ Footer Footer Footer Footer Footer Footer Footer Footer Footer Footer Footer Foo
 /* ---------------------------------------------------------------------------------------------------------------------
 Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage
 --------------------------------------------------------------------------------------------------------------------- */
-#home_page_join_button {font-size:24px; text-shadow:none; margin-bottom:9px; width:100%; text-shadow: #333 1px 1px 1px; visibility: hidden;}
-#home_page_vampire_star {text-align:center; position:absolute; top:46px; left:560px; width:165px; }
-#home_page_slayer_count {
-    font-family:"superclarendon-1", "superclarendon-2", Tahoma, sans-serif;
-    font-weight:700;
-    font-style: normal;
-    visibility: hidden;
-    color:#ed6623; font-size:30px; font-weight:bold; line-height:30px;
-}
-.wf-active #home_page_slayer_count, .wf-active #home_page_join_button {visibility:visible;}
-#home_page_header {
-    background: transparent url(../images/home_page/vampire.png?0000000005) no-repeat top center; 
-    height:402px;
-    width:700px;
-    position:relative;
-    margin-top:-12px;
-    margin-bottom:9px;}
-#home_page_vampire_copy { width: 340px; padding-top:54px;}
-#home_page_header p{color:#FFF;}
+.home_page_join_button {font-size:20px !important; text-shadow:none; margin-bottom:9px; width:280px; text-shadow: #333 1px 1px 1px;}
 
-/*#home_page_header h1 {text-shadow: #FFF 1px 1px 1px;}*/
 #home_page_header h1 { padding-top:-18px; font-size:34px;}
+#home_page_pledge_text {
+    font-size:24px;
+    line-height:28px;
+    font-style: italic;
+}
 
 #home_page_sticker {
     background: transparent url(../images/home_page/sticker.png?0000000005) no-repeat top center; 
@@ -294,9 +280,9 @@ Register Register Register Register Register Register Register Register Register
 #registration_left_col {width:360px; float:left; padding-right:15px; margin-right:15px; border-right:1px solid #ccc}
 #registration_right_col {width:270px; float:left;}
 
-#registration_form .form_row {width:270px;}
-#registration_form .form_row_float {float:left; width:123px;}
-#registration_form .form_row_float_left_field {margin-right:24px;}
+#registration_right_col .form_row {width:270px;}
+#registration_right_col .form_row_float {float:left; width:123px;}
+#registration_right_col .form_row_float_left_field {margin-right:24px;}
 
 
 /* ---------------------------------------------------------------------------------------------------------------------
