Creating a community actions landing page [touch: 524] Recast commitments page as pledge card page [Completed: 527]

--- a/commitments/templates/commitments/_post_pledge_actions.html
+++ b/commitments/templates/commitments/_post_pledge_actions.html
@@ -10,5 +10,5 @@
     Setting the trend means getting credit for what you're already doing and finding more to do.
 </p>
 <div>
-    <a href="{% url event-show %}" class="button home_page_join_button">Community Actions</a>
+    <a href="{% url action_community_show %}" class="button home_page_join_button">Community Actions</a>
 </div>
