--- a/templates/rah/_pledge_block.html
+++ b/templates/rah/_pledge_block.html
@@ -26,33 +26,9 @@
                     <p id="home_page_pledge_text">
                         &#8220;I pledge to save energy <br/>&nbsp;in my home and set the <br/>&nbsp;trend in my community.&#8221;
                     </p>
-                    <form id="pledge_card_form" action="{% url take_pledge %}" method="post">              
-                        {% for error in pledge_card_form.non_field_errors %}
-                            <div class="overset_form_message error">{{ error }}</div>
-                        {% endfor %}
-                        {% for field in pledge_card_form.visible_fields %}
-                            <div class="form_row {% if field.errors %}error{% endif %} {% if field.name == 'first_name' %}form_row_float form_row_float_left_field{% endif%} {% if field.name == 'last_name' %}form_row_float{% endif%}">
-                                {% if "CheckboxInput" in field.field.widget|pprint %}
-                                    {{ field }}{{ field.label_tag }}
-                                {% else %}
-                                    {{ field.label_tag }}{{ field }}
-                                {% endif %}
-                                {% for error in field.errors %}
-                                    <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
-                                {% endfor %}
-                            </div>
-                            {% if field.name == 'last_name' %}<br class="clear"/>{% endif%}
-                        {% endfor %}
-                        <div class="hidden">
-                            {% for field in pledge_card_form.hidden_fields %}
-                                {{ field }}
-                            {% endfor %}
-                            {% csrf_token %}
-                        </div>
-                        <div>
-                            <button type="submit" name="submit" class="home_page_join_button">Take the Pledge</button>
-                        </div>
-                    </form>                    
+                    <form id="pledge_card_form" action="{% url take_pledge %}" method="post">
+                        {% include "commitments/_pledge_card_form.html" %}
+                    </form>
                 </div>
                 <div id="home_pledge_actions_slide" class="hidden">
                     {% include "commitments/_post_pledge_actions.html" %}
