Adding new post pledge language

--- a/commitments/templates/commitments/_post_pledge_actions.html
+++ b/commitments/templates/commitments/_post_pledge_actions.html
@@ -1,13 +1,13 @@
-<h2>Get Started at Home</h2>
+<h2>Set the trend at home</h2>
 <p>
-    Setting the trend means getting credit for what you're already doing and finding more to do.
+    Get credit for the energy-saving steps you’re already taken, and find more ways to save.
 </p>
 <p>
     <a href="{% url action_show  %}" class="button home_page_join_button">Home Actions</a>
 </p>
-<h2>Get Started in your Community</h2>
+<h2>Set the trend in your community</h2>
 <p>
-    Setting the trend means getting credit for what you're already doing and finding more to do.
+    Inspire your friends, family and neighbors to join you by becoming a Trendsetter and taking action to save energy.
 </p>
 <div>
     <a href="{% url action_community_show %}" class="button home_page_join_button">Community Actions</a>
