--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                         <a href="{% url index %}" id="nav_home">Home</a>
                         <a href="{% url action_show %}" id="nav_actions" >Actions</a>
                         <a href="{% url group_list %}" id="nav_teams">Teams</a>
-                        <a href="{% url event-show %}" id="nav_events">Events</a>
+                        <a href="{% url action_community_show %}" id="nav_community">Community</a>
                         <a href="{% url blog_index %}" id="nav_blog">Blog</a>
                     </div>
                 </div>
