--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,7 +74,7 @@ th { padding: 3px; font-weight: normal; color: #444; background: #eee; border-ri
 p { color: #333; margin-bottom: 18px; }
 strong, b { font-weight:bold; }
 em, i { font-style: italic; }
-ol { list-style: decimal; }
+ol li{ list-style: decimal; margin-left: 18px;}
 ul{
     margin-left: 18px;
     padding-left: 18px;
@@ -101,7 +101,6 @@ a.button:hover { color: white; }
     -moz-border-radius: 2px; }
 .form_row li label { position: relative; }
 .form_row li input { width: inherit; }
-.form_row input { height: 18px; }
 .form_row input[type="file"] { height: 24px; }
 .form_row input[type="checkbox"] { width: 15px; }
 .form_row input[type="checkbox"] + label { 
@@ -595,27 +594,19 @@ TestingWidget TestingWidget TestingWidget TestingWidget TestingWidget TestingWid
 #testing_widget {
     position: fixed;
     right: 0;
-    top: 75px;
+    top: 0px;
+    padding: 0 18px;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.6);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
 }
-#testing_widget_tab {
-    position: relative;
-    color: white;
-    background-color: #6EC3D1;
-    font-size: 1.2em;
-    font-weight: bold;
-    padding: 2px 2px 2px 0;
-}
-#testing_widget .ticket_counter { float: left; }
-#testing_widget .ticket_controls { float: right; }
-#testing_feedback_form {
-    width: 189px;
-    background-color: #6EC3D1;
-    border-top: 1px solid black;
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
-    padding: 18px;
-}
-#testing_feedback_form #id_initials, #testing_feedback_form #id_feedback { width: 167px; }
+#testing_widget .ticket_controls { position:relative; text-align:center; }
+#prev_ticket_control {float:left;}
+#next_ticket_control {float:right;}
+#testing_feedback_form {width: 189px;}
+#testing_feedback_form #id_initials, #testing_feedback_form #id_feedback { width: 178px; }
+#ticket_submit { width: 100% }
 #testing_feedback_form .form_row li { float: left; }
 #testing_feedback_form label {
     font-weight: bold;
