fixing typo [touch: 535]

--- a/commitments/templates/commitments/_post_pledge_actions.html
+++ b/commitments/templates/commitments/_post_pledge_actions.html
@@ -1,6 +1,6 @@
 <h2>Set the trend at home</h2>
 <p>
-    Get credit for the energy-saving steps you’re already taken, and find more ways to save.
+    Get credit for the energy-saving steps you've already taken, and find more ways to save.
 </p>
 <p>
     <a href="{% url action_show  %}" class="button home_page_join_button">Home Actions</a>
